1.90v

1. Operator voting update upon user vote
2. Changed alert to confirm on new chat request. If user clicks ok. We open chat.
3. Datepicker for date fields.

execute doc/update_db/update_69.sql for update

1.89v

Features
1. FAQ module supports identifiers and e-mail field. 
https://github.com/remdex/livehelperchat/issues/297
https://github.com/remdex/livehelperchat/issues/292
2. Region support for geo location
https://github.com/remdex/livehelperchat/issues/298
3. BB Code button in chatbox and live help.
4. Saint Martin flag
https://github.com/remdex/livehelperchat/issues/294


Fixes
1. In page embed live help visitors were not redirected to leave a message form.
https://github.com/remdex/livehelperchat/issues/291


execute doc/update_db/update_68.sql for update

1.88v

Features
1. Option to take screenshot in online users list.
2. Danish language

Fixes
1. In right column was incorectly calculated time since last message.

execute doc/update_db/update_67.sql for update

1.87v

Features
1. Option to take user screenshot. Used http://html2canvas.hertzen.com/
2. Option to have BCC recipient in e-mail templates https://github.com/remdex/livehelperchat/issues/282

Changes
1. Changed escape to encodeURIComponent https://github.com/remdex/livehelperchat/issues/288

execute doc/update_db/update_66.sql for update

1.86v

1. Option to set date format. Three new fields in Settings => Time zone settings section. This is available per install and not per individual user.
2. PHP-GeoIP extension support.
3. {nick} support in canned messages.

edit your settings/settings.ini.php file and under 'force_virtual_host' => false,
add
'date_format' => 'Y-m-d',
'date_hour_format' => 'H:i:s',
'date_date_hour_format' => 'Y-m-d H:i:s',


1.85v

1. Canned messages by department
2. Personal canned messages. To operators role have to be assigned "Users" => "Allow user to have personal canned messages"